<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Menu with Options -->
    <item
        android:id="@+id/newBook"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:title="@string/app_name"
        app:showAsAction="ifRoom">
        <menu>
            <!-- Clean DB to start over from zero -->
            <item
                android:id="@+id/removeALL"
                android:title="@string/removeAll"
                app:showAsAction="always"
                />
            <!-- CreditsInfo -->
            <item
                android:id="@+id/credits"
                android:title="@string/credits"
                app:showAsAction="always"/>
        </menu>
    </item>

</menu>